<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note课程表</string>
    <string name="action_settings">Settings</string>
    <string name="jwxt_account">教务系统账号</string>
    <string name="jwxt_password">教务系统密码</string>
    <string name="login">登录</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    

    <string name="empty"></string>
    <string name="mon">周一</string>
	<string name="tue">周二</string>
	<string name="wen">周三</string>
	<string name="thu">周四</string>
	<string name="fri">周五</string>
	<string name="sta">周六</string>
	<string name="sun">周日</string>
	<string name="ai_on">开启智能模式</string>
	<string name="ai_off">关闭智能模式</string>
	<string name="import_confirm">确认导入</string>

</resources>
