<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/test_empty"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/empty" />

        <TextView
            android:id="@+id/test_monday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_empty"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/mon" />

        <TextView
            android:id="@+id/test_tuesday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_monday_course"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/tue" />

        <TextView
            android:id="@+id/test_wednesday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_tuesday_course"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/wen" />

        <TextView
            android:id="@+id/test_thursday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_wednesday_course"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/thu" />

        <TextView
            android:id="@+id/test_friday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_thursday_course"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/fri" />

        <TextView
            android:id="@+id/test_saturday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_friday_course"
            android:background="@drawable/course_text_view_bg"
            android:text="@string/sta" />

        <TextView
            android:id="@+id/test_sunday_course"
            style="@style/courseTableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/test_saturday_course"
            android:background="@drawable/course_table_last_colum"
            android:text="@string/sun" />

        <ScrollView
            android:id="@+id/scroll_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/test_empty"
            android:scrollbars="none" >

            <RelativeLayout
                android:id="@+id/test_course_rl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <!-- The navigation view -->

    <LinearLayout
        android:id="@+id/left_layout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="用户"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:dividerHeight="0dp" >
        </ListView>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>